# Trenino-Thomas

./: .gitignore  Binario.cpp  Binario.h  README.md  Simulation.cpp  Simulation.h  Stazione.cpp  Stazione.h  Stazione1.cpp  Train.cpp  Train.h  Train_func.cpp  generale.txt  line_description.txt  line_description2.txt  main.cpp  timetables.txt  timetables2.txt  timetables3.txt  timetables_1.txt
Rail/: CMakeLists.txt  Esecuzione l-t.txt  Esecuzione l-t_2.txt  Esecuzione l_1-t_1.txt  Esecuzione l_1-t_3.txt  line_description.txt  line_description_1.txt  readme.txt  timetables.txt  timetables_1.txt  timetables_3.txt
Rail/include/: Simulation.h
Rail/src/: Simulation.cpp  Train.cpp  Train.h  Train_func.cpp
Rail/test/: main.cpp
prova/: Binario.h  Simulation.cpp  Simulation.h  Stazione.cpp  Train.cpp  Train.h  Train_func.cpp  file_prova.txt  main.cpp
